More coverage for constraints refs #4

--- a/WhoTestsTheTesters/ConstraintsTests/ConstraintsTests.csproj
+++ b/WhoTestsTheTesters/ConstraintsTests/ConstraintsTests.csproj
@@ -47,7 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basic.cs" />
+    <Compile Include="Expected.cs" />
+    <Compile Include="HasTest.cs" />
+    <Compile Include="IsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
