--- a/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
+++ b/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
@@ -17,6 +17,9 @@
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(OldPCL)' != '' ">
+      <TargetFrameworkProfile>Profile1</TargetFrameworkProfile>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
