--- a/PclUnit/PclUnit.csproj
+++ b/PclUnit/PclUnit.csproj
@@ -18,7 +18,7 @@
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(OldPCL)' != '' ">
-      <TargetFrameworkProfile>Profile1</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Profile1</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,25 +51,27 @@
     <Compile Include="AssertionException.cs" />
     <Compile Include="AssertionHelper.cs" />
     <Compile Include="ParameterSet.cs" />
-    <Compile Include="Runner\Fixture.cs" />
-    <Compile Include="Runner\Meta\AssemblyMeta.cs" />
-    <Compile Include="Runner\Assert.cs" />
-    <Compile Include="Runner\Meta\ResultsFile.cs" />
-    <Compile Include="Runner\Meta\FixtureMeta.cs" />
-    <Compile Include="Runner\Generate.cs" />
-    <Compile Include="Runner\Meta\IJsonSerialize.cs" />
-    <Compile Include="Runner\Meta\IMeta.cs" />
-    <Compile Include="Runner\Log.cs" />
-    <Compile Include="Runner\Meta\Result.cs" />
-    <Compile Include="Runner\Runner.cs" />
-    <Compile Include="Runner\Test.cs" />
-    <Compile Include="Runner\Meta\TestMeta.cs" />
-    <Compile Include="Runner\TestFilter.cs" />
-    <Compile Include="Runner\TestHarness.cs" />
+    <Compile Include="Run\Fixture.cs" />
+    <Compile Include="Run\Meta\AssemblyMeta.cs" />
+    <Compile Include="Run\Assert.cs" />
+    <Compile Include="Run\Meta\ResultsFile.cs" />
+    <Compile Include="Run\Meta\FixtureMeta.cs" />
+    <Compile Include="Run\Meta\IJsonSerialize.cs" />
+    <Compile Include="Run\Meta\IMeta.cs" />
+    <Compile Include="Run\Log.cs" />
+    <Compile Include="Run\Meta\Result.cs" />
+    <Compile Include="Run\Runner.cs" />
+    <Compile Include="Run\Test.cs" />
+    <Compile Include="Run\Meta\TestMeta.cs" />
+    <Compile Include="Run\TestFilter.cs" />
+    <Compile Include="Run\TestHarness.cs" />
     <Compile Include="TestAttribute.cs" />
-    <Compile Include="TestFixture.cs" />
+    <Compile Include="Run\Attributes\TestAttributeBase.cs" />
+    <Compile Include="TestFixtureAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Run\Attributes\TestFixtureAttributeBase.cs" />
     <Compile Include="TestFixtureGeneratorAttribute.cs" />
+    <Compile Include="Run\Attributes\TestFixtureGeneratorAttributeBase.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
