Test in the style of xunit.
  - Some core refactoring that I think improves the design
  - A decent chunk of xunit test api's implemented.
  - Requires using TestClass base class
  - still needs more coverage for assertions

--- a/WhoTestsTheTesters/RunTests.yml
+++ b/WhoTestsTheTesters/RunTests.yml
@@ -4,6 +4,7 @@ config:
   assemblies:
     - BasicTests\bin\Debug\BasicTests.dll
     - ConstraintsTests\bin\Debug\ConstraintsTests.dll
+    - Style\XunitTests\bin\Debug\XunitTests.dll
   platforms:
     - id: net40-x86
     - id: net40-x64 
