--- a/WhoTestsTheTesters/Style/XunitTests/XunitTests.csproj
+++ b/WhoTestsTheTesters/Style/XunitTests/XunitTests.csproj
@@ -14,6 +14,8 @@
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,11 +37,11 @@
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
     <ProjectReference Include="..\..\..\Contrib\PclUnit.Style.Xunit\PclUnit.Style.Xunit.csproj">
-      <Project>{57504543-dc1d-4a8d-8e70-4464c296512c}</Project>
+      <Project>{57504543-DC1D-4A8D-8E70-4464C296512C}</Project>
       <Name>PclUnit.Style.Xunit</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\PclUnit\PclUnit.csproj">
-      <Project>{999019d5-60c5-4ce6-a070-28b197c44d2a}</Project>
+      <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
       <Name>PclUnit</Name>
     </ProjectReference>
   </ItemGroup>
