--- a/Runner/pclunit-runner.net40/pclunit-runner.net40.csproj
+++ b/Runner/pclunit-runner.net40/pclunit-runner.net40.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7AA16C2-E92A-40E5-A9A1-CCA13EA6D877}</ProjectGuid>
+    <ProjectGuid>{F0BA1340-F95D-49B5-8065-E9EB12FB40CA}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>pclunit_runner</RootNamespace>
     <AssemblyName>pclunit-runner</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -43,31 +43,31 @@
     <Reference Include="ManyConsole">
       <HintPath>..\..\packages\ManyConsole.0.4.2.16\lib\ManyConsole.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.Core.2.0.0-beta2\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.Core.1.1.2\lib\net40\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Owin">
+      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.Owin.1.1.2\lib\net40\Microsoft.AspNet.SignalR.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Owin.1.1.0-beta2\lib\net45\Microsoft.Owin.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.Owin.1.1.0-beta2\lib\net40\Microsoft.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Host.HttpListener, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Owin.Host.HttpListener.1.1.0-beta2\lib\net45\Microsoft.Owin.Host.HttpListener.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.Owin.Host.HttpListener.1.1.0-beta2\lib\net40\Microsoft.Owin.Host.HttpListener.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Hosting, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Microsoft.Owin.Hosting.1.1.0-beta2\lib\net40\Microsoft.Owin.Hosting.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Owin.Security">
-      <HintPath>..\..\packages\Microsoft.Owin.Security.1.1.0-beta2\lib\net45\Microsoft.Owin.Security.dll</HintPath>
     </Reference>
     <Reference Include="NDesk.Options">
       <HintPath>..\..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -88,23 +88,38 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PclUnitHub.cs" />
-    <Compile Include="PlatformResult.cs" />
-    <Compile Include="PrintResults.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="..\pclunit-runner\PclUnitHub.cs">
+      <Link>PclUnitHub.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\PlatformResult.cs">
+      <Link>PlatformResult.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\PrintResults.cs">
+      <Link>PrintResults.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\Reshare.cs">
+      <Link>Reshare.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\RunConfigCommand.cs">
+      <Link>RunConfigCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\WriteResults.cs">
+      <Link>WriteResults.cs</Link>
+    </Compile>
+    <Compile Include="..\pclunit-runner\Yml.cs">
+      <Link>Yml.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RunConfigCommand.cs" />
-    <Compile Include="Reshare.cs" />
-    <Compile Include="Util.cs" />
-    <Compile Include="WriteResults.cs" />
-    <Compile Include="Yml.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\pclunit-runner\satellites.yml">
+      <Link>satellites.yml</Link>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config" />
-    <Content Include="satellites.yml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
