--- a/Runner/Satellites/net/net40/packages.config
+++ b/Runner/Satellites/net/net40/packages.config
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.0.0-beta2" targetFramework="net40" />
-  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.8" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="1.1.2" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
 </packages>
