--- a/WhoTestsTheTesters/RunTests.yml
+++ b/WhoTestsTheTesters/RunTests.yml
@@ -4,7 +4,8 @@ config:
   assemblies:
     - BasicTests\bin\Debug\BasicTests.dll
     - ConstraintsTests\bin\Debug\ConstraintsTests.dll
-    - Style\XunitTests\bin\Debug\XunitTests.dll
+    - Style\XunitTests\bin\Debug\XunitTests.dll 
+    - Style\NunitTests\bin\Debug\NunitTests.dll
   platforms:
     - id: net40-x86
     - id: net40-x64 
