--- a/WhoTestsTheTesters/Style/NunitTests/NunitTests.csproj
+++ b/WhoTestsTheTesters/Style/NunitTests/NunitTests.csproj
@@ -14,6 +14,8 @@
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,11 +37,11 @@
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
     <ProjectReference Include="..\..\..\Contrib\PclUnit.Style.Nunit\PclUnit.Style.Nunit.csproj">
-      <Project>{dbd9fd82-e254-43b4-9d69-c398acefb45b}</Project>
+      <Project>{DBD9FD82-E254-43B4-9D69-C398ACEFB45B}</Project>
       <Name>PclUnit.Style.Nunit</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\PclUnit\PclUnit.csproj">
-      <Project>{999019d5-60c5-4ce6-a070-28b197c44d2a}</Project>
+      <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
       <Name>PclUnit</Name>
     </ProjectReference>
   </ItemGroup>
