--- a/Contrib/TestDriven/PclUnit.TestDriven.NetOnly/BasicTests/BasicTests.csproj
+++ b/Contrib/TestDriven/PclUnit.TestDriven.NetOnly/BasicTests/BasicTests.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E64E577E-2F1D-48F9-935A-FABE93E3FBAA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{85B99864-19EB-44ED-8C23-C471E731F3F2}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoughRunner</RootNamespace>
-    <AssemblyName>RoughRunner</AssemblyName>
+    <RootNamespace>BasicTests</RootNamespace>
+    <AssemblyName>BasicTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PclUnit, Version=0.5.0.0, Culture=neutral, PublicKeyToken=15f17d1d4a727da6, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Build\bin\PclUnit.dll</HintPath>
+    </Reference>
+    <Reference Include="PclUnit.TestDriven.NetOnly, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Build\bin\PclUnit.TestDriven.NetOnly.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,26 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="..\..\..\..\WhoTestsTheTesters\Tests\BasicTests\Basic.cs">
+      <Link>Basic.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\WhoTestsTheTesters\Tests\BasicTests\Paramed.cs">
+      <Link>Paramed.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
-      <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
-      <Name>PclUnit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tests\BasicTests\BasicTests.csproj">
-      <Project>{07944FC5-DEBB-478F-A464-AD62CA4DD7A0}</Project>
-      <Name>BasicTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tests\ConstraintsTests\ConstraintsTests.csproj">
-      <Project>{360DD182-DFD4-479E-B001-042413D2DE02}</Project>
-      <Name>ConstraintsTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConventionTestProcessor\ConventionTestProcessor.csproj">
-      <Project>{5AFB0620-F75F-45D6-B287-F1A2F1337DB2}</Project>
-      <Name>ConventionTestProcessor</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
