--- a/WhoTestsTheTesters/Tests/BasicTests/BasicTests.csproj
+++ b/WhoTestsTheTesters/Tests/BasicTests/BasicTests.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E63677AE-4E0B-4983-9C30-9E5506F56D28}</ProjectGuid>
+    <ProjectGuid>{07944FC5-DEBB-478F-A464-AD62CA4DD7A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XunitTests</RootNamespace>
-    <AssemblyName>XunitTests</AssemblyName>
+    <RootNamespace>BasicTests</RootNamespace>
+    <AssemblyName>BasicTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -39,10 +39,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\..\..\Contrib\PclUnit.Style.Xunit\PclUnit.Style.Xunit.csproj">
-      <Project>{57504543-DC1D-4A8D-8E70-4464C296512C}</Project>
-      <Name>PclUnit.Style.Xunit</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\PclUnit\PclUnit.csproj">
       <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
       <Name>PclUnit</Name>
@@ -50,18 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basic.cs" />
-    <Compile Include="Collection.cs" />
-    <Compile Include="Contains.cs" />
-    <Compile Include="Equal.cs" />
-    <Compile Include="Expected.cs" />
+    <Compile Include="Paramed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range.cs" />
-    <Compile Include="Theories.cs" />
-    <Compile Include="Throws.cs" />
-    <Compile Include="IsType.cs" />
-    <Compile Include="UseFixture.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
