--- a/WhoTestsTheTesters/Tests/ConstraintsTests/ConstraintsTests.csproj
+++ b/WhoTestsTheTesters/Tests/ConstraintsTests/ConstraintsTests.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{07944FC5-DEBB-478F-A464-AD62CA4DD7A0}</ProjectGuid>
+    <ProjectGuid>{360DD182-DFD4-479E-B001-042413D2DE02}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BasicTests</RootNamespace>
-    <AssemblyName>BasicTests</AssemblyName>
+    <RootNamespace>ConstraintsTests</RootNamespace>
+    <AssemblyName>ConstraintsTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -39,15 +39,22 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
+    <ProjectReference Include="..\..\..\Contrib\PclUnit.Constraints\PclUnit.Constraints.csproj">
+      <Project>{7251D9B8-DD2A-4DCA-A568-C53772081CE5}</Project>
+      <Name>PclUnit.Constraints</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PclUnit\PclUnit.csproj">
       <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
       <Name>PclUnit</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basic.cs" />
-    <Compile Include="Paramed.cs" />
+    <Compile Include="Expected.cs" />
+    <Compile Include="HasTest.cs" />
+    <Compile Include="IsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
