--- a/WhoTestsTheTesters/RoughRunner/RoughRunner.csproj
+++ b/WhoTestsTheTesters/RoughRunner/RoughRunner.csproj
@@ -47,6 +47,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Contrib\PclUnit.Constraints\PclUnit.Constraints.csproj">
+      <Project>{7251d9b8-dd2a-4dca-a568-c53772081ce5}</Project>
+      <Name>PclUnit.Constraints</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Contrib\PclUnit.Style.Nunit\PclUnit.Style.Nunit.csproj">
+      <Project>{dbd9fd82-e254-43b4-9d69-c398acefb45b}</Project>
+      <Name>PclUnit.Style.Nunit</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Contrib\PclUnit.Style.Xunit\PclUnit.Style.Xunit.csproj">
+      <Project>{57504543-dc1d-4a8d-8e70-4464c296512c}</Project>
+      <Name>PclUnit.Style.Xunit</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
       <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
       <Name>PclUnit</Name>
@@ -62,6 +74,14 @@
     <ProjectReference Include="..\ConventionTestProcessor\ConventionTestProcessor.csproj">
       <Project>{5AFB0620-F75F-45D6-B287-F1A2F1337DB2}</Project>
       <Name>ConventionTestProcessor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tests\Style\NunitTests\NunitTests.csproj">
+      <Project>{ba124f39-825d-49f1-b272-c3347e046800}</Project>
+      <Name>NunitTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tests\Style\XunitTests\XunitTests.csproj">
+      <Project>{e63677ae-4e0b-4983-9c30-9e5506f56d28}</Project>
+      <Name>XunitTests</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
