--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ env:
   global:
     - EnableNuGetPackageRestore=true
   matrix:
-    - MONO_VER="3.1.2"
+    - MONO_VERSION="3.2.7"
+
 before_install:
-  # Make sure mono is installed,
-  - wget "http://download.mono-project.com/archive/${MONO_VER}/macos-10-x86/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg"
-  - sudo installer -pkg "MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg" -target /
+  - wget "http://download.xamarin.com/MonoFrameworkMDK/Macx86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
+  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
+
 script:
   - xbuild PclUnit.mono.sln
   - WhoTestsTheTesters/Tests/RunTests.Mono.Manually.sh
