switched nuget package.config style

--- a/Runner/Platforms/sl/sl50/sl-50-x64.csproj
+++ b/Runner/Platforms/sl/sl50/sl-50-x64.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.sl-50-x64.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TestPage.html" />
@@ -88,7 +88,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
